feat: implement create a user
